<resources>
    <string name="app_name">Aprisco</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="zip">压缩包</string>
    <string name="picture">图片</string>
    <string name="book">文档</string>
    <string name="setup">安装包</string>
    <string name="download">最近下载</string>
    <string name="recent">最近浏览</string>
    <string name="app">应用文件</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
